--- a/.github/workflows/repo2docker.yml
+++ b/.github/workflows/repo2docker.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@master
 
     - name: try-local-build
-      uses: ouseful-PR/repo2docker-action@master #forked and tweaked
+      uses: jupyterhub/repo2docker-action@master
       with:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
